<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">DophiGo Scanner</string>
    <string name="login">Log in</string>
    <string name="logining">Logging in</string>
    <string name="username">User name</string>
    <string name="passworld">Password</string>
    <string name="forget_pwd">Forgot password</string>
    <string name="start_scan">Start scanning</string>
    <string name="stop_scan">Stop scanning</string>
    <string name="state_updated">uploaded</string>
    <string name="state_unupdate">Upload failed</string>
    <string name="number">Number</string>
    <string name="device_id">Device ID</string>
    <string name="upload_state">Upload status</string>
    <string name="record_time">input time</string>
    <string name="scan_result">Scanning result</string>
    <string name="scan_uploading">Scanning result is uploading</string>
    <string name="upload_success_tip">%s scanning records are successfully uploaded</string>
    <string name="upload_record">Check the scanning records.</string>
    <string name="scanrecord_empty">There is no scanning records uploaded</string>
    <string name="error_qrillegl">QR code incorrect</string>
    <string name="logout_tips">Confirmed to log out?</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="back">Go back</string>
    <string name="scan">Continue to scan</string>
    <string name="upload_success">Upload successfully</string>
    <string name="user_info_error">You have logged in elsewhere, please log in again.</string>
    <string name="user_account">Input user name</string>
    <string name="user_pwd">Input password</string>
    <string name="http_er">System abnormal</string>
    <string name="http_er_10903013">Permission denied</string>
    <string name="http_er_10903007">The login is abnormal, the account does not exist or the password is incorrect.</string>
    <string name="http_er_10902013">This account has been disabled.</string>
    <string name="http_er_10901022">Parameter error</string>
    <string name="http_er_10901020">The parameter is empty.</string>
    <string name="user_info">My info</string>
    <string name="change_pwd">Revise password</string>
    <string name="about">About</string>
    <string name="about_app">About the version</string>
    <string name="rigist">Apply for an account</string>
    <string name="email">Email address</string>
    <string name="account_info">Account info</string>
    <string name="set_pwd">Set password</string>
    <string name="userinfo">Personal info</string>
    <string name="email_code">Email verification code</string>
    <string name="login_pwd">Log in password</string>
    <string name="user_name">Name</string>
    <string name="user_tel">Mobile No.</string>
    <string name="compony_tel">Company Tel.</string>
    <string name="company_name">Company name</string>
    <string name="company_addr">Company address</string>
    <string name="company_info">Company info</string>
    <string name="rigist_create">Submit application</string>
    <string name="code_send_success">Verification code has been sent</string>
    <string name="error_email_format">Incorrect email format</string>
    <string name="error_info_less">Please fill in the information completely.</string>
    <string name="rigist_ok">Apply successfully</string>
    <string name="logout">Log out</string>
    <string name="send_email_code">Send the email verification code</string>
    <string name="new_pwd">New password</string>
    <string name="new_pwd_agan">Confirm the new password</string>
    <string name="http_er_801001004">The system is being maintained, please try again later.</string>
    <string name="http_er_801011001">The required parameter is empty.</string>
    <string name="http_er_801011002">The account is under reviewed.</string>
    <string name="http_er_801011003">The account has been disabled.</string>
    <string name="http_er_801011004">Token error, or the account is logged in on another mobile.</string>
    <string name="http_er_801011005">Wrong password</string>
    <string name="http_er_801011006">The email has been registered.</string>
    <string name="http_er_801011007">No verification code is obtained or it\'s expired.</string>
    <string name="http_er_801011008">Verification code error</string>
    <string name="http_er_801011009">The email account does not exist.</string>
    <string name="http_er_801011010">Incorrect username or password</string>
    <string name="http_er_801011011">Fail to send the email.</string>
    <string name="http_er_801011012">Upgrade package information does not exist.</string>
    <string name="http_er_801003007">Device not bound</string>
    <string name="pwd_format">The password must contain both numbers and letters, and the length is 6-18 digits.</string>
    <string name="opration_success">Successful operation</string>
    <string name="pwd_not">Inconsistent password entered twice.</string>
    <string name="reset_pwd_success">Your password has been modified successfully. Please log in again.</string>
    <string name="unbind">Unbind</string>
    <string name="unbind_tips">The device serial number is: %s. Do you want to unbind this device?</string>
    <string name="unbind_success">The device with the serial number %s is unbound successfully.</string>
    <string name="download_address">Downloaded address</string>
</resources>
