<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_userinfo"
            android:icon="@drawable/ic_menu_userinfo"
            android:title="@string/user_info" />
        <item
            android:id="@+id/nav_changepwd"
            android:icon="@drawable/ic_menu_pwd"
            android:title="@string/change_pwd" />
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_app" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/download_address" />
        </menu>
    </item>

</menu>
