<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/back"
    android:orientation="vertical">

    <include
        android:id="@+id/base_toolbar"
        layout="@layout/base_toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="match_parent">

            <com.example.user.qrrecoder.materdesign.TipTextView
                android:id="@+id/tx_info"
                android:text="@string/account_info"
                style="@style/textview_tips" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_email"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tx_info"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:hint="@string/email"
                    style="@style/input_text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_emailcode"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="0.7"
                app:layout_constraintTop_toBottomOf="@+id/iet_email"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="14dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintRight_toLeftOf="@+id/btn_emailcode"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_emailcode"
                    android:hint="@string/email_code"
                    style="@style/input_text" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/btn_emailcode"
                android:layout_marginTop="0dp"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="0.3"
                android:padding="8dp"
                style="@style/button_normal"
                app:layout_constraintRight_toRightOf="@id/iet_email"
                app:layout_constraintTop_toTopOf="@id/iet_emailcode"
                app:layout_constraintLeft_toRightOf="@id/iet_emailcode"
                app:layout_constraintBottom_toBottomOf="@id/iet_emailcode"
                android:text="@string/send_email_code" />

            <com.example.user.qrrecoder.materdesign.TipTextView
                android:id="@+id/tx_pwd"
                android:text="@string/set_pwd"
                app:layout_constraintTop_toBottomOf="@id/iet_emailcode"
                style="@style/textview_tips" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_pwd"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tx_pwd"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_pwd"
                    android:hint="@string/login_pwd"
                    style="@style/input_text" />
            </android.support.design.widget.TextInputLayout>

            <com.example.user.qrrecoder.materdesign.TipTextView
                android:id="@+id/tx_userinfo"
                android:text="@string/userinfo"
                app:layout_constraintTop_toBottomOf="@id/iet_pwd"
                style="@style/textview_tips" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_username"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tx_userinfo"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_username"
                    android:hint="@string/user_name"
                    style="@style/input_text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_usertel"
                app:layout_constraintTop_toBottomOf="@+id/iet_username"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="14dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_usertel"
                    android:hint="@string/user_tel"
                    style="@style/input_text" />

            </android.support.design.widget.TextInputLayout>

            <com.example.user.qrrecoder.materdesign.TipTextView
                android:id="@+id/tx_company_info"
                android:text="@string/company_info"
                app:layout_constraintTop_toBottomOf="@id/iet_usertel"
                style="@style/textview_tips" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_companyname"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tx_company_info"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_companyname"
                    android:hint="@string/company_name"
                    style="@style/input_text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_companytel"
                app:layout_constraintTop_toBottomOf="@+id/iet_companyname"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="14dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_companytel"
                    android:hint="@string/compony_tel"
                    style="@style/input_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/iet_companyaddr"
                app:layout_constraintTop_toBottomOf="@+id/iet_companytel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="14dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                style="@style/input_layout_small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_companyaddr"
                    android:hint="@string/company_addr"
                    style="@style/input_text" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_ok"
                style="@style/button_normal"
                android:text="@string/rigist_create"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iet_companyaddr"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>