<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/back"
    android:padding="16dp">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        style="@style/logo_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219"
        app:srcCompat="@drawable/ic_launcher_fore" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/iet_username"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        style="@style/input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:hint="@string/email"
            style="@style/input_text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/iet_userpwd"
        style="@style/input_layout"
        app:layout_constraintTop_toBottomOf="@+id/iet_username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            style="@style/input_text"
            android:hint="@string/passworld"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_go"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iet_userpwd"
        style="@style/button_normal" />

    <TextView
        android:id="@+id/tx_find_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/bt_go"
        app:layout_constraintTop_toBottomOf="@+id/bt_go"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/forget_pwd"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/tx_rigist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="@+id/bt_go"
        app:layout_constraintTop_toBottomOf="@+id/bt_go"
        android:layout_marginTop="8dp"
        android:text="@string/rigist"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />
</android.support.constraint.ConstraintLayout>