<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/back"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar"></include>

    <android.support.constraint.ConstraintLayout style="@style/coorlayout_contant">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/iet_oldpwd"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/iet_emailcode"
            style="@style/input_layout_small">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_oldpwd"
                android:hint="@string/new_pwd"
                style="@style/input_text_pwd" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/iet_pwd"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/iet_oldpwd"
            style="@style/input_layout_small">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_pwd"
                android:hint="@string/new_pwd"
                style="@style/input_text_pwd" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/iet_username"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/iet_pwd"
            style="@style/input_layout_small">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:hint="@string/new_pwd_agan"
                style="@style/input_text_pwd" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/pwd_format"
            android:id="@+id/tx_pwd_format"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/iet_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_change"
            app:layout_constraintTop_toBottomOf="@+id/tx_pwd_format"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/ok"
            style="@style/button_normal"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>